[gd_scene load_steps=22 format=2]

[ext_resource path="res://Entities/Ghost/Sprites/Ghost Attack Right-5.png" type="Texture" id=1]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Attack Left-1.png" type="Texture" id=2]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Attack Left-2.png" type="Texture" id=3]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Attack Left-3.png" type="Texture" id=4]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Spawn-1.png" type="Texture" id=5]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Spawn-2.png" type="Texture" id=6]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Attack Right-6.png" type="Texture" id=7]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Attack Right-1.png" type="Texture" id=8]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Attack Right-3.png" type="Texture" id=10]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Attack Right-2.png" type="Texture" id=11]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Attack Left-5.png" type="Texture" id=12]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Attack Left-6.png" type="Texture" id=13]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Spawn-3.png" type="Texture" id=14]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Left-1.png" type="Texture" id=16]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Spawn-4.png" type="Texture" id=17]
[ext_resource path="res://Entities/Ghost/Sprites/Ghost Right-1.png" type="Texture" id=18]
[ext_resource path="res://Entities/Ghost/Ghost.gd" type="Script" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": false,
"name": "Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 7 ) ],
"loop": false,
"name": "AttackRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 13 ) ],
"loop": false,
"name": "AttackLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 17 ) ],
"loop": false,
"name": "Spawn",
"speed": 4.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": false,
"name": "RightIdle",
"speed": 0.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "Death",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 24 )

[sub_resource type="Animation" id=3]
resource_name = "Float"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.25 ),
"transitions": PoolRealArray( 1, 1.18921 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 0, -4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0.698039, 0.141176, 0.0823529, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Ghost" type="KinematicBody2D"]
script = ExtResource( 19 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2.64614 )
z_index = 1
frames = SubResource( 1 )
animation = "RightIdle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Float"
anims/Float = SubResource( 3 )
anims/Hit = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
